--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,13 +66,88 @@ header nav ul li a {
 
 /* Intro Starts */
 
+
+.intro {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
+.intro p {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: right;
+    font-size: 25px;
+}
 /* WorK */
+.work {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+  
+
+}
 .run-buddy h3 {
     background-image: url("../images/hero-bg.jpeg");
+    background-size: cover;
+    background-position: 100%;
+    height: 200px;
+    padding: 30px 30px 30px 250px;
+
+    
 }
 
 .homework1 h3 {
     background-image: url("../images/homework1.png");
+    background-size: cover;
+    background-position: 100%;
+    height: 200px;
+    padding: 30px 30px 30px 250px;
+}
+
+.assignment1 h3 {
+    background-image: url("../images/mycutie.jpeg");
+    background-size: cover;
+    background-position: 100%;
+    height: 200px;
+    padding: 30px 30px 30px 250px;
+}
+
+.assignment2 h3 {
+    background-image: url("../images/pokemon-bg.jpeg");
+    background-size: cover;
+    background-position: 100%;
+    height: 200px;
+    padding: 30px 30px 30px 250px;
+}
+
+.assignment3 h3 {
+    background-image: url("../images/90sfavcartoons-bg.jpeg");
+    background-size: cover;
+    background-position: 100%;
+    height: 200px;
+    padding: 30px 30px 30px 250px;
+}
+
+.work-description {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    
+
+}
+
+.work-discription2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-direction: row;
+    
+    
+    
 }
 
 /* Footer Starts */
