--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,7 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background-color: yellow;
-    color: blue;
+    background-color: teal;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -33,9 +32,9 @@ header h1 {
     padding: 20px 0 20px 20px;
     font-weight: bold;
     font-size: 36px;
-    color: navy;
     margin: 0;
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
+    color: rgb(255, 196, 0);
 }
 
 header nav ul li a {
@@ -43,48 +42,47 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 1.55vw;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    color: rgb(255, 196, 0);
+}
+
+header ul li a:hover {
+    color: orangered;
 }
 
 /* Hero Starts */
 .hero {
-    display: flex;
-    flex-wrap: wrap;
     background-image: url("../images/portfolio-hero.jpeg");
     background-size: cover;
     background-position: 100%;
     height: 500px;
-    padding: 30px 30px 30px 250px;
-
 }
 
 .hero h2 {
-    text-align: right;
+    float: right;
     font-size: 50px;
     font-family: 'Times New Roman', Times, serif;
     color: navy;
+    padding: 350px 40px 40px 0;
 }
 
 /* Intro Starts */
 
-
 .intro {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    flex-direction: row;
-    
+    flex-flow: row;
 }
 
 .intro p {
-    width: 65%;
-    
+    padding-left: 100px;
+    font-size: 25px;
+    color: rgb(3, 50, 190);
 }
 
 .intro h2 {
-    width: 30%;
-    font-size: 35px;
+   font-size: 35px;
+   color: rgb(4, 21, 71);
 }
-
 
 /* WorK */
 .work {
@@ -99,6 +97,7 @@ header nav ul li a {
 .work h2 {
     font-size: 35px;
     width: 10%;
+    color: rgb(4, 21, 71);
 }
 
 .run-buddy h3 {
@@ -160,16 +159,17 @@ header nav ul li a {
 }
 
 .work button {
+    display: flex;
     background-color: lightpink;
-    color: midnightblue;
-    text-align: center;
-    float: left;
+    color: rgb(4, 21, 71);
+    justify-content: center;
     padding: 15px 0;
     font-size: 30px;
     width: 40%;
 }
 
 .work button:hover {
+    display: flex;
     color: olive;
     background-color: palegoldenrod;
 }
@@ -185,7 +185,7 @@ footer {
 footer h2 {
     font-size: 36px;
     padding: 20px 0 20px 30px;
-    color: yellow;
+    color: rgb(255, 196, 0);
     font-weight: bold;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
@@ -204,7 +204,7 @@ footer ul li a {
     font-weight: lighter;
     font-size: 1.55vw;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    color: yellow;
+    color: rgb(255, 196, 0);
 }
 
 footer ul li a:hover {
