--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
-
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 /* HEADER START */
 header {
@@ -13,12 +17,13 @@ header {
 
 header nav {
     margin: 7px 0;
+    padding-top: 15px;
 }
 
 header nav ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     list-style: none;
 }
@@ -71,37 +76,74 @@ header ul li a:hover {
     display: flex;
     flex-wrap: wrap;
     flex-flow: row;
-    padding-top: 70px;
-    padding-bottom: 50px;
+    justify-content: space-between;
+    padding: 50px 0 50px 0;
+    margin: 0 auto;
+    width: 100%;
+    
+    
 }
 
 .intro p {
-    padding-left: 20px;
+    line-height: 1;
     font-size: 25px;
     color: rgb(3, 50, 190);
+    width: 70%;
+    
+    
 }
 
 .intro h2 {
-   padding-left: 90px;
-   font-size: 35px;
+   font-size: 60px;
+   width: 30%;
+   padding-top: 10px;
+   
    color: rgb(4, 21, 71);
 }
 
 /* WorK */
 .work {
-    flex-wrap: wrap;
-    justify-content: space-between;
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     flex-direction: row;
-  
-
+    width: 100%;
+    
+    
 }
 
 .work h2 {
-    padding-left: 90px;
-    font-size: 35px;
-    width: 10%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row;
+    font-size: 60px;
+    width: 20%;
     color: rgb(4, 21, 71);
+    padding-left: 200px;
+}
+
+.work-description {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 80%;
+    margin: 0 auto;
+    
+    
+}
+
+.work-discription2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 30px 0 30px 0;
+    flex-direction: row;
+    width: 80%;
+    margin: 0 auto;
+    
+    
 }
 
 .run-buddy h3 {
@@ -109,57 +151,48 @@ header ul li a:hover {
     background-size: cover;
     background-position: 100%;
     height: 400px;
-    width: 90%;
+    width: 80%;
+    margin: 0 auto;
+    
 }
 
 .homework1 h3 {
     background-image: url("../images/homework1.png");
     background-size: cover;
     background-position: 100%;
-    height: 600px;
-    width: 700px;
+    height: 250px;
+    width: 600px;
+}
+
+.homework1 {
+    padding-bottom: 30px;
 }
 
 .assignment1 h3 {
     background-image: url("../images/mycutie.jpeg");
     background-size: cover;
     background-position: 100%;
-    height: 600px;
-    width: 700px;
+    height: 250px;
+    width: 600px;
+   
 }
 
 .assignment2 h3 {
     background-image: url("../images/pokemon-bg.jpeg");
     background-size: cover;
     background-position: 100%;
-    height: 600px;
-    width: 700px;
+    height: 250px;
+    width: 600px;
+    
 }
 
 .assignment3 h3 {
     background-image: url("../images/90sfavcartoons-bg.jpeg");
     background-size: cover;
     background-position: 100%;
-    height: 600px;
-    width: 700px;
-}
-
-.work-description {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 90%;
+    height: 250px;
+    width: 600px;
     
-
-}
-
-.work-discription2 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 90%;
 }
 
 .work button {
@@ -213,4 +246,45 @@ footer ul li a {
 
 footer ul li a:hover {
     color: orangered;
+}
+
+@media screen and (max-width: 980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+        position: relative;
+  }
+
+  header h1 {
+        width: 100%;
+        text-align: center;
+        font-size: 50px;
+  } 
+    
+  header nav ul {
+        margin-top: 5px;
+        width: 100%;
+        justify-content: center;
+  }
+
+  header nav ul li a {
+        font-size: 30px;
+  }
+
+  .hero h2 {
+      text-align: center;
+      width: 100%;
+  }
+
+  .intro{
+      justify-content: center;
+      
+    }
+
+  .intro h2 {
+      
+
+  }
+
+  
 }
