--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,12 @@ header nav ul {
 header a{
     text-decoration: none;
     display: inline;
+    color: rgb(255, 196, 0);
+    font-size: larger;
+}
+
+header a:hover{
+    color: orangered;
 }
 
 header h1 {
@@ -43,9 +49,9 @@ header h1 {
 }
 
 header nav ul li a {
-    padding: 10px 15px;
-    font-weight: lighter;
-    font-size: 1.55vw;
+    padding: 25px 25px 20px 0;
+    font-weight: bold;
+    font-size: 1.7vw;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     color: rgb(255, 196, 0);
 }
@@ -74,31 +80,30 @@ header ul li a:hover {
 
 .intro {
     display: flex;
-    flex-wrap: wrap;
-    flex-flow: row;
-    justify-content: space-between;
-    padding: 50px 0 50px 0;
+    padding: 90px 0 50px 200px;
     margin: 0 auto;
     width: 100%;
-    
-    
 }
 
 .intro p {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: right;
+    width: 80%;
     line-height: 1;
-    font-size: 25px;
+    font-size: 20px;
     color: rgb(3, 50, 190);
-    width: 70%;
-    
-    
+    padding-left: 150px;
+    padding-top: 20px;
 }
 
 .intro h2 {
-   font-size: 60px;
-   width: 30%;
-   padding-top: 10px;
-   
-   color: rgb(4, 21, 71);
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 60px;
+    justify-content: left;
+    width: 20%;
+    color: rgb(4, 21, 71);
 }
 
 /* WorK */
@@ -108,8 +113,6 @@ header ul li a:hover {
     flex-wrap: wrap;
     flex-direction: row;
     width: 100%;
-    
-    
 }
 
 .work h2 {
