--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ header ul li a:hover {
 
 .hero h2 {
     float: right;
-    font-size: 50px;
+    font-size: 45px;
     font-family: 'Times New Roman', Times, serif;
     color: navy;
     padding: 350px 40px 40px 0;
@@ -79,26 +79,28 @@ header ul li a:hover {
 /* Intro Starts */
 .intro {
     display: flex;
-    padding: 90px 0 50px 200px;
+    justify-content: space-between;
+    padding: 90px 0 50px 180px;
     margin: 0 auto;
     width: 100%;
+    flex-direction: row;
 }
 
 .intro p {
     flex-wrap: wrap;
-    justify-content: right;
     width: 80%;
     line-height: 1;
     font-size: 20px;
     color: rgb(3, 50, 190);
-    padding-left: 150px;
     padding-top: 20px;
+    padding-left: 20px;
 }
 
 .intro h2 {
     flex-wrap: wrap;
-    font-size: 60px;
-    justify-content: left;
+    padding-right: 80px;
+    font-size: 45px;
+    padding-left: 0;
     width: 20%;
     color: rgb(4, 21, 71);
 }
@@ -107,23 +109,22 @@ header ul li a:hover {
 /* WorK Starts */
 .work {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     flex-direction: row;
     width: 100%;
 }
 
 .work h2 {
-    font-size: 60px;
+    font-size: 45px;
     width: 20%;
     color: rgb(4, 21, 71);
-    padding-left: 200px;
+    padding-left: 170px;
+    padding-right: 0;
+    
 }
 
 .work-description {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    padding-left: 0;
     flex-direction: column;
     width: 80%;
     margin: 0 auto;
@@ -149,7 +150,7 @@ header ul li a:hover {
 }
 
 .run-buddy:hover {
-    width: 1700px;
+    width: 1300px;
 }
 
 .homework1 h3 {
@@ -157,7 +158,12 @@ header ul li a:hover {
     background-size: cover;
     background-position: 100%;
     height: 250px;
-    width: 600px;
+    width: 425px;
+}
+
+.homework1 h3:hover {
+    height: 280px;
+    width: 450px;
 }
 
 .homework1 {
@@ -169,8 +175,12 @@ header ul li a:hover {
     background-size: cover;
     background-position: 100%;
     height: 250px;
-    width: 600px;
-   
+    width: 425px;
+}
+
+.assignment1 h3:hover {
+    height: 280px;
+    width: 450px;
 }
 
 .assignment2 h3 {
@@ -178,8 +188,12 @@ header ul li a:hover {
     background-size: cover;
     background-position: 100%;
     height: 250px;
-    width: 600px;
-    
+    width: 425px;
+}
+
+.assignment2 h3:hover {
+    height: 280px;
+    width: 450px;
 }
 
 .assignment3 h3 {
@@ -187,9 +201,13 @@ header ul li a:hover {
     background-size: cover;
     background-position: 100%;
     height: 250px;
-    width: 600px;
-    
+    width: 425px;
 }
+
+.assignment3 h3:hover {
+    height: 280px;
+    width: 450px;
+}    
 
 .work button {
     display: flex;
@@ -197,7 +215,7 @@ header ul li a:hover {
     color: rgb(4, 21, 71);
     justify-content: center;
     padding: 15px 0;
-    font-size: 30px;
+    font-size: 20px;
     width: 40%;
     border-radius: 5px;
     box-shadow: 2px 2px 6px #000;
@@ -256,7 +274,7 @@ footer ul li a:hover {
 }
 /* Footer Ends */
 
-
+/* Media Screen */
 @media screen and (max-width: 980px) {
     header {
         padding-bottom: 0;
