--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,22 +284,22 @@ footer ul li a:hover {
 
     .homework1 h3 {
         height: 250px;
-        width: 430px;
+        width: 450px;
     }
 
     .assignment1 h3 {
         height: 250px;
-        width: 430px;
+        width: 450px;
     }
 
     .assignment2 h3 {
         height: 250px;
-        width: 430px;
+        width: 450px;
     }
 
     .assignment3 h3 {
         height: 250px;
-        width: 430px;
+        width: 450px;
     }
 
     .button {
@@ -532,5 +532,44 @@ footer ul li a:hover {
         padding-left: 0;
     }
 
+}
+
+@media screen and (max-width: 375px) {
+    header h1 {
+        font-size: 30px;
+        padding-left: 0;
+    }
+    
+    header nav ul li a {
+        font-size: 20px;
+    }
+    
+    .hero h2 {
+        font-size: 30px;
+    }
+    .intro h2 {
+        font-size: 30px;
+        justify-content: center;
+        padding: 10px 0 0 120px;
+    }
+
+    .work h2 {
+        font-size: 30px;
+        padding: 0 0 10px 180px;
+    }
+    
+    .work button {
+        font-size: 15px;
+    }
+
+    footer h2 {
+        padding: 0;
+        font-size: 30px;
+    }
+    
+    footer ul li a {
+        font-size: 25px;
+        padding-right: 35px;
+    }
 }
 
