--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -537,7 +537,7 @@ footer ul li a:hover {
 @media screen and (max-width: 375px) {
     header h1 {
         font-size: 30px;
-        padding-left: 0;
+        padding-left: 20px;
     }
     
     header nav ul li a {
